# bogus-interface

./: .gitmodules  CMakeLists.txt
interface/: ArgusConfig.cmake.in  CMakeLists.txt
interface/src/: Argus.hh  ClothFrictionData.hh  ClothFrictionSolver.cc  ClothFrictionSolver.hh  NodalGaussSeidel.impl.hh  NodalSelfContact.cc
